--- a/Starter pack REHO/Summary_of_reading.html
+++ b/Starter pack REHO/Summary_of_reading.html
@@ -160,6 +160,13 @@ window.Quarto = {
 <p><span class="math display">\[
 \forall b \in B, \forall u \in U, \forall p \in P, \forall t \in T
 \]</span></p>
+<p>f means the unit size; <span class="math inline">\(F_{max}\)</span> and <span class="math inline">\(F_{unit}\)</span> refer to the upper bound and lower bound of the unit installations; y is a binary variable which expresses whether to purchase the unit or not.</p>
+</section>
+<section id="energy-balances" class="level4">
+<h4 class="anchored" data-anchor-id="energy-balances">Energy balances</h4>
+<p><span class="math display">\[
+\dot{E}^{gr, +}_{b,q,t} + \Sigma
+\]</span></p>
 </section>
 </section>
 </section>
